Steps for the notepad lab.

--- a/labs/notepad/public/index.html
+++ b/labs/notepad/public/index.html
@@ -27,7 +27,11 @@ This page is not designed to work without JavaScript.
             Use this code as you wish.
         </footer>
         <script>
-
+var notes = [
+    "Wax on, wax off.",
+    "Sand the floor.",
+    "Paint the house.",
+];
         </script>
     </body>
 </html>
