--- a/demos/notepad/public/index.html
+++ b/demos/notepad/public/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8"/>
         <title>Notepad</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/css/bootstrap.min.css" rel="stylesheet"/>
         <link href="stylesheets/examplestyle.css" rel="stylesheet"/>
-        <script src="http://code.angularjs.org/1.2.10/angular.min.js"></script>
+        <script src="https://code.angularjs.org/1.2.10/angular.min.js"></script>
     </head>
     <body>
         <noscript>
