--- a/demos/chat/public/index.html
+++ b/demos/chat/public/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8"/>
         <title>Chat</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/css/bootstrap.min.css" rel="stylesheet"/>
         <link href="css/examplestyle.css" rel="stylesheet"/>
         <link href="css/app.css" rel="stylesheet"/>
-        <script src="http://code.angularjs.org/1.2.10/angular.min.js"></script>
-        <script src="http://code.angularjs.org/1.2.10/angular-route.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.1.0/moment.min.js"></script>
+        <script src="https://code.angularjs.org/1.2.10/angular.min.js"></script>
+        <script src="https://code.angularjs.org/1.2.10/angular-route.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.1.0/moment.min.js"></script>
         <script src="js/app.js"></script>
     </head>
     <body ng-controller="pageController">
