--- a/labs/notepad/public/index.html
+++ b/labs/notepad/public/index.html
@@ -12,25 +12,26 @@
     <body>
         <noscript>
             <div class="warning">
-                This page is not designed to work without JavaScript.
+            This page is not designed to work without JavaScript.
             </div>
         </noscript>
         <header id="page-header">
             <h1>Notepad</h1>
         </header>
-        <section id="page-body">
-            <div ng-controller="NotepadController">
-                <form ng-submit="newNote()">
-                    <input type="text" ng-model="noteForm.text" name="newNote" placeholder="Submite a new note"/>
-                    <input type="submit"/>
-                </form>
-                <ul>
+        <section id="page-body" ng-controller="NotepadController">
+            <form ng-submit="newNote()">
+                <input type="text" name="new_note" id="new_note" ng-model="noteform.text" 
+                	placeholder="Write a new note please!"
+                	ng-disabled="posting" />
+                <input type="submit" ng-disabled="posting" />
+            </form>
+            <div>
+                <ul ng-attr-style="{{ notes && 'display:block' || 'display:none' }}">
                     <li ng-repeat="note in notes track by $index">
-                        {{note}}
+                    <example-decoration></example-decoration>{{note}}
                     </li>
                 </ul>
             </div>
-            
         </section>
         <footer id="page-footer">
             Use this code as you wish.
@@ -51,9 +52,8 @@
                         scope.$apply();
                     });
                 }
-            }
+            };
         });    
-
         app.controller("NotepadController", function($scope, $timeout, $http){
             $http.get("/api")
                 .success(function(data) {
@@ -69,9 +69,11 @@
 	    		        .success(function(data) {
 	    			        $scope.notes = data;
 	    			        $scope.noteform.text = "";
+	    			        $scope.posting = false;
 	    		        })
 	    		        .error(function(data) {
 	    			        console.log("Something bad happened", data);
+	    			        $scope.posting = false;
 	    		        });
     	        }
             };
