Sample Service with Github

--- a/labs/JavascriptTrng/HTTP-Service/index.html
+++ b/labs/JavascriptTrng/HTTP-Service/index.html
@@ -7,17 +7,18 @@
 </head>
 
 <body ng-controller="MainController">
-<h1>{{message}}</h1>
+    <h1>{{message}}</h1>
 
-<div>{{ error }}</div>
+    <div>{{ error }}</div>
+        {{countdown}}
+        <form name="searchUser" ng-submit="search(username)">
+            <input type="search" required placeholder="Username to find" ng-model="username" />
+            <input type="submit" value="Search">
+        </form>
 
-<form name="searchUser" ng-submit="search(username)">
-    <input type="search" required placeholder="Username to find" ng-model="username" />
-    <input type="submit" value="Search">
-</form>
-
-<div ng-include="'userdetails.html'" ng-show="user"> </div>
+    <div ng-include="'userdetails.html'" ng-show="user"> </div>
 
 </body>
 <script src="js/script.js"></script>
+<script src="js/github.js"></script>
 </html>
