--- a/labs/JavascriptTrng/HTTP-Service/index.html
+++ b/labs/JavascriptTrng/HTTP-Service/index.html
@@ -3,22 +3,18 @@
 
 <head>
     <script data-require="angular.js@*" data-semver="1.3.0-beta.5" src="https://code.angularjs.org/1.3.0-beta.5/angular.js"></script>
+    <script data-require="angular-route@*" data-semver="1.2.16" src="http://code.angularjs.org/1.2.16/angular-route.js"></script>
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<body ng-controller="MainController">
-    <h1>{{message}}</h1>
-
-    <div>{{ error }}</div>
-        {{countdown}}
-        <form name="searchUser" ng-submit="search(username)">
-            <input type="search" required placeholder="Username to find" ng-model="username" />
-            <input type="submit" value="Search">
-        </form>
-
-    <div ng-include="'userdetails.html'" ng-show="user"> </div>
-
+<body>
+<h1>Github Viewer</h1>
+<div ng-view></div>
 </body>
-<script src="js/script.js"></script>
+
+<script src="js/app.js"></script>
+<script src="js/MainController.js"></script>
+<script src="js/UserController.js"></script>
+<script src="js/RepoController.js"></script>
 <script src="js/github.js"></script>
 </html>
