--- a/labs/JavascriptTrng/HTTP-Service/user.html
+++ b/labs/JavascriptTrng/HTTP-Service/user.html
@@ -1,5 +1,6 @@
 <div ng-show="user">
     <h2>{{user.name}}</h2>
+    {{error}}
     <img ng-src="http://www.gravatar.com/avatar/{{user.gravatar_id}}" title="{{user.name}}">
     Order:
     <select ng-model="repoSortOrder">
@@ -19,9 +20,14 @@
     </thead>
     <tbody>
     <tr ng-repeat="repo in repos | orderBy:repoSortOrder">
-        <td>{{repo.name}}</td>
+        <td>
+            <a href="#/repo/{{user.login}}/{{repo.name}}">
+                {{repo.name}}
+            </a>
+        </td>
         <td>{{repo.stargazers_count | number}}</td>
         <td>{{repo.language}}</td>
     </tr>
     </tbody>
 </table>
+<a href="#/main">Back to search</a>
